[gd_scene load_steps=25 format=3 uid="uid://cawdyfpfsyjw2"]

[ext_resource type="Script" path="res://components/StatsComponent.gd" id="1_1qjnl"]
[ext_resource type="Script" path="res://asteroid.gd" id="1_w4qni"]
[ext_resource type="Texture2D" uid="uid://b6d8sd0dknlk6" path="res://assets/asteroids.png" id="1_y2cs5"]
[ext_resource type="Texture2D" uid="uid://dvutqdujegquv" path="res://assets/crystal_overlay.png" id="2_crt7q"]
[ext_resource type="Script" path="res://components/MoveComponent.gd" id="3_jrj8c"]
[ext_resource type="Script" path="res://components/HurtboxComponent.gd" id="4_k5urw"]
[ext_resource type="Script" path="res://components/SpawnerComponent.gd" id="4_pxums"]
[ext_resource type="Script" path="res://components/DestroyedComponent.gd" id="5_conau"]
[ext_resource type="Script" path="res://components/HurtComponent.gd" id="6_4tyqs"]
[ext_resource type="PackedScene" uid="uid://cf1ag78h5qbjy" path="res://explosion.tscn" id="8_0wglx"]
[ext_resource type="Shape2D" uid="uid://dqvh2wqno0cy2" path="res://resources/asteroid_small.tres" id="11_huls1"]
[ext_resource type="Script" path="res://components/FlashComponent.gd" id="12_kg6os"]
[ext_resource type="Script" path="res://components/ScaleComponent.gd" id="13_xa7j1"]
[ext_resource type="Script" path="res://components/ShakeComponent.gd" id="14_we2gw"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="15_2fffi"]
[ext_resource type="AudioStream" uid="uid://dp0el66lt1per" path="res://sounds/hurt.wav" id="15_cgpgj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cadwe"]
atlas = ExtResource("1_y2cs5")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd0r6"]
atlas = ExtResource("1_y2cs5")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5yno"]
atlas = ExtResource("1_y2cs5")
region = Rect2(62, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7q65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cadwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd0r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5yno")
}],
"loop": true,
"name": &"sizes",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_i6kdb"]
atlas = ExtResource("2_crt7q")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1j37"]
atlas = ExtResource("2_crt7q")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1jdp"]
atlas = ExtResource("2_crt7q")
region = Rect2(62, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7hgl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6kdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1j37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1jdp")
}],
"loop": true,
"name": &"crystals",
"speed": 5.0
}]

[node name="Asteroid" type="Node2D"]
script = ExtResource("1_w4qni")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("1_1qjnl")
health = 3

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_jrj8c")
actor = NodePath("..")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q7q65")
animation = &"sizes"

[node name="CrystalSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_n7hgl")
animation = &"crystals"

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurt_box_component")]
script = ExtResource("6_4tyqs")
stats_component = NodePath("../StatsComponent")
hurt_box_component = NodePath("../HurtboxComponent")

[node name="SpawnerComponent" type="Node" parent="."]
script = ExtResource("4_pxums")
scene = ExtResource("8_0wglx")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroyed_effect_spawner_component")]
script = ExtResource("5_conau")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroyed_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("4_k5urw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
light_mask = 2
position = Vector2(-1, 0)
shape = ExtResource("11_huls1")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("12_kg6os")
sprite = NodePath("../Sprite")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("13_xa7j1")
sprite = NodePath("../Sprite")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("14_we2gw")
node = NodePath("../Sprite")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_cgpgj")
script = ExtResource("15_2fffi")
